Code update, including LESS variables, Escapings, Mixins & Maps

--- a/index.html
+++ b/index.html
@@ -4,8 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página do Aluno</title>
+    <link rel="stylesheet" href="build/styles/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Smythe&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <img class="profile-avatar" src="https://via.placeholder.com/96x96">
+            <div class="profile-bio">
+                <h1 class="profile-bio-name">Página pessoal</h1>
+                <h2 class="profile-bio-subtitle">Front-end Developer</h2>
+                <p class="profile-bio-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat libero saepe aliquid fuga at, alias quasi tempora veniam debitis inventore! Quas distinctio voluptatibus ad totam sed eum doloremque aperiam! Commodi.
+                </p>
+            </div>
+        </header>
+        <nav>
+            <ul class="social-links">
+                <li>
+                    <a href="https://www.instagram.com/">
+                        <img src="./src/images/instagram.svg" alt="Logomarca do Instagram">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com">
+                        <img src="./src/images/linkedin.svg" alt="Logomarca do LinkedIn">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.github.com">
+                        <img src="./src/images/github.svg" alt="Logomarca do Github">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.gmail.com">
+                        <img src="./src/images/mail.svg" alt="Icone de email não lido">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
