2nd Code update, finalizing the current project

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página do Aluno</title>
+    <title>Página de Histórico Profissional</title>
     <link rel="stylesheet" href="build/styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,6 +41,25 @@
                 <li>
                     <a href="https://www.gmail.com">
                         <img src="./src/images/mail.svg" alt="Icone de email não lido">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <nav>
+            <ul class="project-list">
+                <li class="project-list-item">
+                    <a href="#">
+                        Visite o projeto "Calculadora de médias"
+                    </a>
+                </li>
+                <li class="project-list-item">
+                    <a href="#">
+                        Visite o projeto "Games Shop"
+                    </a>
+                </li>
+                <li class="project-list-item">
+                    <a href="#">
+                        Visite o projeto "Galeria de fotos"
                     </a>
                 </li>
             </ul>
